--- a/PDFMerger/WebContent/css/estilos.css
+++ b/PDFMerger/WebContent/css/estilos.css
@@ -13,3 +13,15 @@
 .cor-fundo {
 	background-color: #f4f4f4;
 }
+
+.titulo {
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin-bottom: 20px;
+  font-size: 21px;
+  line-height: inherit;
+  color: #333;
+  border: 0;
+  border-bottom: 1px solid #e5e5e5;
+}
