--- a/PDFMerger/WebContent/css/loginStyle.css
+++ b/PDFMerger/WebContent/css/loginStyle.css
@@ -127,8 +127,8 @@ hr{
     box-sizing: border-box;
 }
 
-.form-signin #inputEmail,
-.form-signin #inputPassword {
+.form-signin .inputEmail,
+.form-signin .inputPassword {
     direction: ltr;
     height: 44px;
     font-size: 16px;
