Melhorias na função de upload e tabela de arquivos disponíveis.
Realizado alteração na função de upload de arquivos para verificar
somente o nome dos dos arquivos que o usuário logado possui acesso.
A tabela de arquivos disponíveis agora exibe somente os arquivos que o
usuário logado possui acesso, e em ordem alfabética. Adicionado o ícone
para realizar o download do arquivo. Realizado alteração para o ícone de
acesso publico ou restrito do arquivo respeitar o seu nível de acesso.

--- a/PDFMerger/WebContent/css/estilos.css
+++ b/PDFMerger/WebContent/css/estilos.css
@@ -10,6 +10,11 @@
 	margin-left: 15px;
 }
 
+.icon-line-u {
+	margin-left: 17px;
+	margin-right: 3px;
+}
+
 .cor-fundo {
 	background-color: #f4f4f4;
 }
